# apps/backend/core-api/docs/swagger.yaml
@@ -1,28 +1,5 @@
 basePath: /
 definitions:
-  auth.requestGoogleOAuthResponse:
-    properties:
-      url:
-        example: https://accounts.google.com/o/oauth2/auth?client_id=YOUR_CLIENT_ID&redirect_uri=YOUR_REDIRECT_URI&response_type=code&scope=email
-          profile
-        type: string
-    type: object
-  auth.verifyGoogleOAuthRequest:
-    properties:
-      code:
-        type: string
-      state:
-        type: string
-    type: object
-  auth.verifyGoogleOAuthResponse:
-    properties:
-      access_token:
-        type: string
-      expires_in:
-        type: integer
-      refresh_token:
-        type: string
-    type: object
   customerror.Err:
     description: Custom error type
     properties:
@@ -322,10 +299,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/auth.requestGoogleOAuthResponse'
+        "302":
+          description: Found
         "400":
           description: Bad Request
           schema:
@@ -334,31 +309,29 @@ paths:
       tags:
       - Auth
   /api/v1/auth/verify-google-oauth:
-    post:
+    get:
       consumes:
       - application/json
       description: Verify Google OAuth code
       operationId: verify-google-oauth
       parameters:
-      - description: Code
-        in: body
+      - in: query
         name: code
-        required: true
-        schema:
-          $ref: '#/definitions/auth.verifyGoogleOAuthRequest'
-      - description: State
-        in: body
+        type: string
+      - in: query
         name: state
-        required: true
-        schema:
-          $ref: '#/definitions/auth.verifyGoogleOAuthRequest'
+        type: string
+      - in: query
+        name: code
+        type: string
+      - in: query
+        name: state
+        type: string
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/auth.verifyGoogleOAuthResponse'
+        "302":
+          description: Found
         "400":
           description: Bad Request
           schema:
